# django-prometheus

./: Dockerfile  docker-compose.yml  pyproject.toml  setup.py
django_prometheus/: middleware.py
django_prometheus/conf/: __init__.py
